--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PERFUMS STAR - Tu Aroma, Tu Elegancia</title>
+    <link rel="icon" type="image/png" href="https://ibb.co/ch1xrBgq">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         * {
@@ -131,7 +132,7 @@
                 notes: "coco, higo verde, menta, notas verdes y sándalo.",
                 description: "Fresco y tropical con un toque dulce-salado. Huele limpio, natural y veraniego..",
                 occasion: "Día",
-                image: "https://ss701.liverpool.com.mx/xl/1086935691.jpg"
+                image: "https://aliss.do/media/catalog/product/f/7/f7aea9a8d284564820db9cb2321fac0c889a38a8_file.jpg?optimize=medium&bg-color=255,255,255&fit=bounds&height=700&width=700&canvas=700:700"
             },
             {
                 id: 5,
@@ -414,3 +415,4 @@
     </script>
 </body>
 </html>
+
