--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <body class="bg-black text-white">
     <!-- Intro Screen -->
     <div class="intro-screen">
-        <img src="https://imgur.com/r7UMElR" alt="PERFUMS STAR Logo" class="intro-logo">
+        <img src="https://ibb.co/ch1xrBgq" alt="PERFUMS STAR Logo" class="intro-logo">
         <h1 class="intro-title">PERFUMS STAR</h1>
         <p class="intro-subtitle">TU AROMA, TU ELEGANCIA</p>
     </div>
@@ -215,7 +215,7 @@
     <header class="border-b-2 border-white bg-blur">
         <div class="max-w-7xl mx-auto px-6 py-8">
             <div class="flex flex-col items-center">
-                <img src="https://imgur.com/r7UMElR" alt="PERFUMS STAR Logo" class="w-32 h-32 mb-4 object-contain">
+                <img src="https://ibb.co/ch1xrBgq" alt="PERFUMS STAR Logo" class="w-32 h-32 mb-4 object-contain">
                 <h1 class="text-5xl font-bold tracking-widest text-center mb-3 glow">PERFUMS STAR</h1>
                 <p class="text-center text-lg tracking-widest text-gray-300">TU AROMA, TU ELEGANCIA</p>
             </div>
@@ -566,3 +566,4 @@
     </script>
 </body>
 </html>
+
