--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
             object-fit: contain;
             animation: logoEntrance 1.5s ease-out forwards;
             margin-bottom: 30px;
+            filter: brightness(1.5) contrast(1.2);
+            background: white;
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 0 0 40px rgba(255, 255, 255, 0.5);
         }
         
         .intro-title {
@@ -205,7 +210,7 @@
 <body class="bg-black text-white">
     <!-- Intro Screen -->
     <div class="intro-screen">
-        <img src="https://ibb.co/ch1xrBgq" alt="PERFUMS STAR Logo" class="intro-logo">
+        <img src="https://media.discordapp.net/attachments/706353805008175175/1438770143072358430/Diseno_sin_titulo_1.png?ex=6918169d&is=6916c51d&hm=8854e7bb4f61e730fca8587ac6e745a1ea315823ef7113969af118f5f26e7210&=&format=webp&quality=lossless" alt="PERFUMS STAR Logo" class="intro-logo">
         <h1 class="intro-title">PERFUMS STAR</h1>
         <p class="intro-subtitle">TU AROMA, TU ELEGANCIA</p>
     </div>
@@ -215,7 +220,9 @@
     <header class="border-b-2 border-white bg-blur">
         <div class="max-w-7xl mx-auto px-6 py-8">
             <div class="flex flex-col items-center">
-                <img src="https://ibb.co/ch1xrBgq" alt="PERFUMS STAR Logo" class="w-32 h-32 mb-4 object-contain">
+                <div class="bg-white p-3 rounded-lg shadow-lg mb-4">
+                    <img src="https://media.discordapp.net/attachments/706353805008175175/1438770143072358430/Diseno_sin_titulo_1.png?ex=6918169d&is=6916c51d&hm=8854e7bb4f61e730fca8587ac6e745a1ea315823ef7113969af118f5f26e7210&=&format=webp&quality=lossless" alt="PERFUMS STAR Logo" class="w-24 h-24 object-contain" style="filter: brightness(1) contrast(1.2);">
+                </div>
                 <h1 class="text-5xl font-bold tracking-widest text-center mb-3 glow">PERFUMS STAR</h1>
                 <p class="text-center text-lg tracking-widest text-gray-300">TU AROMA, TU ELEGANCIA</p>
             </div>
@@ -566,4 +573,3 @@
     </script>
 </body>
 </html>
-
