--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body class="bg-black text-white">
     <!-- Intro Screen -->
     <div class="intro-screen">
-        <img src="https://media.discordapp.net/attachments/706353805008175175/1438770143072358430/Diseno_sin_titulo_1.png?ex=6918169d&is=6916c51d&hm=8854e7bb4f61e730fca8587ac6e745a1ea315823ef7113969af118f5f26e7210&=&format=webp&quality=lossless" alt="PERFUMS STAR Logo" class="intro-logo">
+        <img src="https://ibb.co/ch1xrBgq" alt="PERFUMS STAR Logo" class="intro-logo">
         <h1 class="intro-title">PERFUMS STAR</h1>
         <p class="intro-subtitle">TU AROMA, TU ELEGANCIA</p>
     </div>
@@ -636,3 +636,4 @@
     </script>
 </body>
 </html>
+
