Update fmt.Println message to Goodbye World

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body class="bg-black text-white">
     <!-- Intro Screen -->
     <div class="intro-screen">
-        <img src="https://ibb.co/ch1xrBgq" alt="PERFUMS STAR Logo" class="intro-logo">
+        <img src="https://i.postimg.cc/tCQCxZXK/Diseno-sin-titulo-1.png" alt="PERFUMS STAR Logo" class="intro-logo">
         <h1 class="intro-title">PERFUMS STAR</h1>
         <p class="intro-subtitle">TU AROMA, TU ELEGANCIA</p>
     </div>
@@ -636,4 +636,5 @@
     </script>
 </body>
 </html>
+
 
