--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </div>
                 
                 <div class="bg-white p-3 rounded-lg shadow-lg mb-4">
-                    <img src="https://media.discordapp.net/attachments/706353805008175175/1438770143072358430/Diseno_sin_titulo_1.png?ex=6918169d&is=6916c51d&hm=8854e7bb4f61e730fca8587ac6e745a1ea315823ef7113969af118f5f26e7210&=&format=webp&quality=lossless" alt="PERFUMS STAR Logo" class="w-24 h-24 object-contain" style="filter: brightness(1) contrast(1.2);">
+                    <img src="https://i.postimg.cc/tCQCxZXK/Diseno-sin-titulo-1.png" alt="PERFUMS STAR Logo" class="w-24 h-24 object-contain" style="filter: brightness(1) contrast(1.2);">
                 </div>
                 <h1 class="text-5xl font-bold tracking-widest text-center mb-3 glow">PERFUMS STAR</h1>
                 <p class="text-center text-lg tracking-widest text-gray-300">TU AROMA, TU ELEGANCIA</p>
@@ -636,5 +636,6 @@
     </script>
 </body>
 </html>
+
 
 
