--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             {
                 id: 9,
                 name: "9AM Dive eau de perfum",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "PROXIMAMENTE",
                 notes: "menta, bergamota, limón, jengibre y maderas.",
                 description: "fragancia muy fresca, limpia y acuática con un toque cítrico. Perfecta para el día, verano y climas cálidos.",
                 occasion: "Dia",
@@ -429,7 +429,7 @@
             {
                 id: 13,
                 name: "Toy boy Eau da parfum moschino",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "5ml-190MXN - 10ml-290MXN",
                 notes: "rosa, pimienta rosa, nuez moscada, bergamota y maderas.",
                 description: "Floral y especiado, moderno, llamativo y sensual.",
                 occasion: "Noche",
@@ -510,7 +510,7 @@
             {
                 id: 22,
                 name: "Santal 33",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "5ml-260MXN - 10ml-470MXN",
                 notes: "Sándalo y cuero",
                 description: "Aroma amaderado y elegante. Ideal para uso diario o noches frescas.",
                 occasion: "Diario",
@@ -519,7 +519,7 @@
             {
                 id: 23,
                 name: "Asad Bourbon",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "5ml-200MXN - 10ml-380MXN",
                 notes: "Vainilla, tabaco y ron",
                 description: "Cálido y dulce. Perfecto para noches frías.",
                 occasion: "Invierno",
@@ -528,7 +528,7 @@
             {
                 id: 24,
                 name: "Eros Energy",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "5ml-370MXN - 10ml-420MXN",
                 notes: "Notas cítricas y menta",
                 description: "Fresco y vibrante. Ideal para el día o verano.",
                 occasion: "Verano",
@@ -537,7 +537,7 @@
             {
                 id: 25,
                 name: "Sauvage Elixir Dior",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "PROXIMAMENTE",
                 notes: "Canela, lavanda y ámbar",
                 description: "Intenso y especiado. Perfecto para la noche.",
                 occasion: "Noche",
@@ -546,7 +546,7 @@
             {
                 id: 26,
                 name: "Dolce Gabbana King",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "PROXIMAMENTE",
                 notes: "Notas cítricas, lavanda y madera",
                 description: "Fresco, masculino y elegante para uso diario.",
                 occasion: "Diario",
@@ -555,7 +555,7 @@
             {
                 id: 27,
                 name: "Odyssey Mandarin Sky",
-                subtitle: "5ml-250MXN - 10ml-420MXN",
+                subtitle: "5ml-200MXN - 10ml-310MXN",
                 notes: "Mandarina y vainilla",
                 description: "Cítrico y ambarado. Fresco pero con fondo cálido, perfecto para el día.",
                 occasion: "Día",
@@ -636,6 +636,7 @@
     </script>
 </body>
 </html>
+
 
 
 
