--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             {
                 id: 20,
                 name: "Bucephalus Armaf",
-                subtitle: "5ml-150MXN - 10ml-250MXN",
+                subtitle: "AGOTADO",
                 notes: "Cuero y especias",
                 description: "Aroma cálido y elegante. Ideal para la noche o climas fríos.",
                 occasion: "Noche",
@@ -636,6 +636,7 @@
     </script>
 </body>
 </html>
+
 
 
 
