--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             {
                 id: 10,
                 name: "Hawas For Him",
-                subtitle: "5ml-130MXN - 10ml-240MXN",
+                subtitle: "AGOTADO",
                 notes: "Notas acuáticas, ámbar gris y manzana",
                 description: "Fresco, juvenil y versátil, perfecto para el día o verano.",
                 occasion: "Verano",
@@ -636,6 +636,7 @@
     </script>
 </body>
 </html>
+
 
 
 
