--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body class="bg-black text-white">
     <!-- Intro Screen -->
     <div class="intro-screen">
-        <img src="https://ibb.co/Sw1mPhGB" alt="PERFUMS STAR Logo" class="intro-logo">
+        <img src="https://www.photo-pick.com/online/TcqzsNOA.link" alt="PERFUMS STAR Logo" class="intro-logo">
         <h1 class="intro-title">PERFUMS STAR</h1>
         <p class="intro-subtitle">TU AROMA, TU ELEGANCIA</p>
     </div>
@@ -384,7 +384,7 @@
             {
                 id: 8,
                 name: "Gentleman Reserve Privé",
-                subtitle: "5ml-280MXN - 10ml-480MXN",
+                subtitle: "5ml-250MXN - 10ml-440MXN",
                 notes: "Whisky, iris y madera de cedro",
                 description: "Aroma elegante y sofisticado, ideal para eventos formales y noches frías.",
                 occasion: "Formal",
@@ -456,7 +456,7 @@
             {
                 id: 16,
                 name: "Bvlgari Man In Black",
-                subtitle: "5ml-270MXN - 10ml-470MXN",
+                subtitle: "5ml-210MXN - 10ml-350MXN",
                 notes: "Ron, cuero y especias",
                 description: "Cálido, fuerte y masculino, ideal para invierno o noches.",
                 occasion: "Invierno",
@@ -537,7 +537,7 @@
             {
                 id: 25,
                 name: "Sauvage Elixir Dior",
-                subtitle: "PROXIMAMENTE",
+                subtitle: "5ml-250MXN - 10ml-440MXN",
                 notes: "Canela, lavanda y ámbar",
                 description: "Intenso y especiado. Perfecto para la noche.",
                 occasion: "Noche",
@@ -555,7 +555,7 @@
             {
                 id: 27,
                 name: "Odyssey Mandarin Sky",
-                subtitle: "5ml-200MXN - 10ml-310MXN",
+                subtitle: "5ml-160MXN - 10ml-210MXN",
                 notes: "Mandarina y vainilla",
                 description: "Cítrico y ambarado. Fresco pero con fondo cálido, perfecto para el día.",
                 occasion: "Día",
@@ -636,6 +636,7 @@
     </script>
 </body>
 </html>
+
 
 
 
