--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body class="bg-black text-white">
     <!-- Intro Screen -->
     <div class="intro-screen">
-        <img src="https://www.photo-pick.com/online/TcqzsNOA.link" alt="PERFUMS STAR Logo" class="intro-logo">
+        <img src="https://ibb.co/SDR9SdWx" alt="PERFUMS STAR Logo" class="intro-logo">
         <h1 class="intro-title">PERFUMS STAR</h1>
         <p class="intro-subtitle">TU AROMA, TU ELEGANCIA</p>
     </div>
@@ -275,7 +275,7 @@
                 </div>
                 
                 <div class="bg-white p-3 rounded-lg shadow-lg mb-4">
-                    <img src="https://ibb.co/Sw1mPhGB" alt="PERFUMS STAR Logo" class="w-24 h-24 object-contain" style="filter: brightness(1) contrast(1.2);">
+                    <img src="https://ibb.co/SDR9SdWx" alt="PERFUMS STAR Logo" class="w-24 h-24 object-contain" style="filter: brightness(1) contrast(1.2);">
                 </div>
                 <h1 class="text-5xl font-bold tracking-widest text-center mb-3 glow">PERFUMS STAR</h1>
                 <p class="text-center text-lg tracking-widest text-gray-300">TU AROMA, TU ELEGANCIA</p>
@@ -636,6 +636,7 @@
     </script>
 </body>
 </html>
+
 
 
 
