Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -560,6 +560,15 @@
                 description: "Cítrico y ambarado. Fresco pero con fondo cálido, perfecto para el día.",
                 occasion: "Día",
                 image: "https://http2.mlstatic.com/D_Q_NP_970248-MLU75885956193_042024-O.webp"
+            },
+            {
+                id: 28,
+                name: "Erba Pura",
+                subtitle: "5ml-340MXN - 10ml-599MXN",
+                notes: "Frutas tropicales, cítricos, vainilla y almizcle",
+                description: "Frutal intenso y envolvente, dulce y moderno con un fondo cremoso. Muy llamativo y de gran duración.",
+                occasion: "Noche",
+                image: "https://scentperfumes.mx/cdn/shop/files/ERBA_PURA.png?v=1744652098"
             }
         ];
 
@@ -636,6 +645,7 @@
     </script>
 </body>
 </html>
+
 
 
 
