--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                 name: "Erba Pura",
                 subtitle: "5ml-340MXN - 10ml-599MXN",
                 notes: "Frutas tropicales, cítricos, vainilla y almizcle",
-                description: "Frutal intenso y envolvente, dulce y moderno con un fondo cremoso. Muy llamativo y de gran duración.",
+                description: "Frutal dulce e intenso, moderno y muy llamativo.",
                 occasion: "Noche",
                 image: "https://scentperfumes.mx/cdn/shop/files/ERBA_PURA.png?v=1744652098"
             }
@@ -645,6 +645,7 @@
     </script>
 </body>
 </html>
+
 
 
 
